# c-gpt

./: .gitignore  Dockerfile  LICENSE  README.md  cloud_instance_setup.sh  config.py  docker-compose.yml  pyproject.toml  requirements.txt  requirments.txt  setup.sh
configs/: bishop.toml  bishop_cloud.toml  knight.toml  queen.toml
data/processed/: itos.json
data/small_set/: stoi.json
hardware/: instance_gc.json
models/bishop/: bishop.csv  results.csv
notebooks/: c-gpt-dev.ipynb
notebooks/knight_analysis/: knight.csv  knight_analysis.ipynb
scripts/: checks.py  preprocess.py  train.py
src/cgpt/: callbacks.py  datasets.py  evaluate.py  exceptions.py  model_base.py  paths.py  storage.py  tests.py  trainer.py
src/data/: pre_proccess.py  preprocess.py
src/models/: model_base.py  test.py  train.py
