[project]
name = "cgpt"
version = "0.2.0"
requires-python = ">=3.12"
  
dependencies = [
    "chess",
    "numpy",
    "pandas",
    "stockfish",
    "torch",
]

[project.optional-dependencies]
cloud = ["google-cloud-storage", "pyarrow[gcs]"]
notebooks = ["ipython"]

[tool.setuptools.packages.find]
where = ["src"]

